# OnlineResourceWatcherApp

./: .gitignore  .gitmodules  README.md  info.json
.github/workflows/: cd.yml  main.yml
Admin/: Installer.php  Status.php  Uninstaller.php  Updater.php
Admin/Install/: Messages.install.json  Messages.php  Navigation.install.json  Navigation.php  Workflow.install.json  Workflow.php  db.json
Admin/Routes/: Cli.php  Console.php
Controller/: ApiController.php  BackendController.php  Controller.php
Models/: Inform.php  InformBlacklist.php  InformBlacklistMapper.php  InformMapper.php  NullInform.php  NullInformBlacklist.php  NullReport.php  NullResource.php  PermissionCategory.php  Report.php  ReportMapper.php  ReportStatus.php  Resource.php  ResourceMapper.php  ResourceStatus.php  SettingsEnum.php
Theme/Backend/: admin-bills.tpl.php  admin-logs.tpl.php  admin-organizations.tpl.php  admin-resources.tpl.php  admin-users.tpl.php  header.tpl.php  nav-side.tpl.php  organization-bills.tpl.php  organization-resources.tpl.php  organization-users.tpl.php  resource-comparison-inline.tpl.php  resource-create.tpl.php  resource-list.tpl.php  resource-single.tpl.php  resource-view.tpl.php  user-dashboard.tpl.php  user-reports.tpl.php  user-resources.tpl.php
app/local/: MainWindow.xaml  MainWindow.xaml.cs  OnlineResourceWatcherLocalApp.csproj  OnlineResourceWatcherLocalApp.sln
app/server/: CMakeLists.txt  OnlineResourceWatcherServerApp.sln  OnlineResourceWatcherServerApp.vcxproj  OnlineResourceWatcherServerApp.vcxproj.filters  Routes.h  config.json  main.cpp  resource.h
app/server/Controller/: ApiController.h  InstallController.h
app/server/Install/: config.json
app/server/Models/: Account.h  AccountStatus.h  Db.h  InstallType.h  Organization.h  ReosurceStatus.h  Resource.h  ResourceInfo.h
app/server/x64/Debug/: OnlineResourceWatcherServerApp.exe.recipe  OnlineResourceWatcherServerApp.ilk  OnlineResourceWatcherServerApp.vcxproj.FileListAbsolute.txt  vc143.idb
app/server/x64/Debug/OnlineRe.e4833a04.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  OnlineResourceWatcherServerApp.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  rc.command.1.tlog  rc.read.1.tlog  rc.write.1.tlog
app/web/: Application.php  Routes.php  WebApplication.php  config.json  humans.txt  index.php  robots.txt  workflow.md
local/: App.xaml  App.xaml.cs
server/: CMakeLists.txt  OnlineResourceWatcherServerApp.aps  OnlineResourceWatcherServerApp.vcxproj  Routes.h  main.cpp
server/Controller/: ApiController.h  InstallController.h
server/Install/: config.json  db.sqlite
server/Models/: Account.h  AccountStatus.h  Db.h  InstallType.h  Organization.h  ReosurceStatus.h  Resource.h  ResourceInfo.h  ResourceMapper.h  ResourceStatus.h  ResourceType.h
setup/: config.sh  demoSetup.php  setup.sh
tests/: Autoloader.php  Bootstrap.php
tests/Admin/: AdminTest.php
tests/Controller/: ApiControllerTest.php
tests/Models/: NullInformBlacklistTest.php  (+3 more)
(+77 files in other folders)
